# AIWeChatauto

./: .gitignore  LICENSE-CN.md  README.md  app.py  app_new.py  auto_release.py  config.json  config_manager.py  gemini_service.py  main.py  pyproject.toml  requirements.txt  wechat_api.py  日志.md  项目工作流程详解.md  项目目录结构.md
attached_assets/: 1_1752195577025.py  2_1752195577025.py  access_token_info_1752195577025.json  add_draft_1752195577025.py  coze工作流方法.md  publish_draft_1752195577025.py  upload_result_1752195577025.json  全局错误码_1752195577025.md  发布草稿_1752195577025.md  新增草稿_1752195577025.md  更新草稿.md  样式库.md  群发设定.md  阿里百炼文生图.md
cache/: .gitkeep  article_cleaned_WTT美国大满贯女双决赛落幕_20250713_171815.html  article_cleaned_上海市民崩溃今年的蝉为啥这么多_20250721_122235.html  article_cleaned_人执着于被爱被认可会更难以挣脱现实的困境_20250714_182751.html  article_cleaned_人执着于被爱被认可会更难以挣脱现实的困境_20250714_185026.html  article_cleaned_人执着于被爱被认可会更难以挣脱现实的困境_20250714_190735.html  article_cleaned_促发展惠民生 置换债发行提速_20250713_165355.html  article_cleaned_出轨外国电竞选手女生拟遭学校开除_20250713_141739.html  article_cleaned_千万粉网红演唱会不露脸 主办方回应_20250721_123033.html  article_cleaned_千万粉网红演唱会不露脸 主办方回应_20250721_123223.html  article_cleaned_千万粉网红演唱会不露脸 主办方回应旺仔小_20250721_123718.html  article_cleaned_千万粉网红演唱会不露脸 主办方回应旺仔小_20250721_123912.html  article_cleaned_句句都不黄句句都很撩_20250721_204437.html  article_cleaned_城市归根结底是人民的城市_20250714_174657.html  article_cleaned_城市归根结底是人民的城市_20250714_175254.html  article_cleaned_城市归根结底是人民的城市_20250714_180131.html  article_cleaned_城市归根结底是人民的城市_20250714_180743.html  article_cleaned_大巴黎主帅锁喉切尔西球员_20250714_090146.html  (+60 more)
data/: history.json  (+2 more)
(+25 files in other folders)
